// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders correctly when prop: listType=all 1`] = `
<div
  className="sc-bdVaJa NQGah"
>
  <div
    className="sc-bwzfXH dNiCOA"
  >
    Results
  </div>
</div>
`;

exports[`App component renders correctly when prop: listType=saved 1`] = `
<div
  className="sc-bdVaJa NQGah"
>
  <div
    className="sc-bwzfXH dNiCOA"
  >
    Saved Properties
  </div>
</div>
`;
